crates/ic-lint/tests/snapshots/default_type_mismatch__bool_to_int.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `long`
  @ test.idl:3:14

 2 │ struct Bad {
 3 │     @default(true)
   │              ˆˆˆˆ incompatible default value
 4 │     long my_int;
 5 │ };
