crates/ic-lint/tests/snapshots/default_type_mismatch__bounded_string_const_too_long.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `string<5>`
  @ test.idl:5:14

 4 │ struct Bad {
 5 │     @default(LONG) string<5> value;
   │              ˆˆˆˆ incompatible default value
 6 │ };
