crates/ic-lint/tests/snapshots/default_type_mismatch__const_sequence_primitive_mismatch.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `sequence<long>`
  @ test.idl:5:14

 4 │ struct Bad {
 5 │     @default(BYTES) sequence<long> values;
   │              ˆˆˆˆˆ incompatible default value
 6 │ };
