crates/ic-lint/tests/snapshots/default_type_mismatch__int_to_string.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `string`
  @ test.idl:3:14

 2 │ struct Bad {
 3 │     @default(123)
   │              ˆˆˆ incompatible default value
 4 │     string my_string;
 5 │ };
