crates/ic-lint/tests/snapshots/default_type_mismatch__invalid_enum_int_value.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `Color`
  @ test.idl:5:14

 4 │ struct Bad {
 5 │     @default(9)
   │              ˆ incompatible default value
 6 │     Color my_color;
 7 │ };
