crates/ic-lint/tests/snapshots/default_type_mismatch__invalid_enum_through_typedef.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
expression: test_lint_hir(source)
---
⨯ default-type-mismatch: @default value is not compatible with member type `MyColor`
  @ test.idl:6:14

 5 │ struct Bad {
 6 │     @default(9)
   │              ˆ incompatible default value
 7 │     MyColor my_color;
 8 │ };
