crates/ic-lint/tests/snapshots/default_type_mismatch__sequence_element_type_mismatch.snap
---
source: crates/ic-lint/tests/default_type_mismatch.rs
assertion_line: 247
expression: test_lint_hir(source)
---
⨯: string value cannot be assigned to type int32
  @ test.idl:3:15

 2 │ struct Bad {
 3 │     @default({"a", "b"})
   │               ˆˆˆ incompatible types
 4 │     sequence<long> my_seq;
 5 │ };
